Some little changes

--- a/app/screens/home_screen.kv
+++ b/app/screens/home_screen.kv
@@ -87,7 +87,7 @@
                         pos: self.pos
                 Label:
                     id: lbl_title
-                    text: "TITLE"
+                    text: ""
                     halign: 'left'
                     valign: 'middle'
                     text_size: self.size
