--- a/app/screens/my_widgets.kv
+++ b/app/screens/my_widgets.kv
@@ -95,8 +95,8 @@
             pos: root.pos[0], root.pos[1] + 4
 
 <CheckBox>:
-    background_checkbox_normal: '../media/icons/square_2.png'
-    background_checkbox_down: '../media/icons/square_plus.png'
+    background_checkbox_normal: './assets/icons/square_2.png'
+    background_checkbox_down: './assets/icons/square_plus.png'
 
 <Header>:
     canvas.before:
