add: main_screen_manager created

--- a/app/screens/home_screen.kv
+++ b/app/screens/home_screen.kv
@@ -68,7 +68,7 @@
                 icon: './assets/icons/log_out.png'
                 height: 70
                 on_release: 
-                    app.stop()
+                    root.log_out()
         # Home
         BoxLayout:
             orientation: 'vertical'
