--- a/app/screens/manage_prices_screen.kv
+++ b/app/screens/manage_prices_screen.kv
@@ -9,17 +9,12 @@
 #:import DoubleClickLabel screens.widgets.doubleclicklabel
 
 <ManagePrices>:
-    id: main_win
-    space_x: self.size[0]
-    space_y: self.size[1]
+    id: manage_prices_screen
     BoxLayout:
         orientation: 'vertical'
-        # size_hint: None, None
-        # width: 800
-        # height: main_win.space_y
-        size: main_win.size
+        size: self.parent.size
         pos_hint: {'right':1}
-        padding: main_win.space_x/2-450, 10
+        padding: self.parent.size[0]/2-450, 10
         spacing: 10
         # Form
         BoxLayout:
@@ -44,9 +39,9 @@
                     hint_text: "Product"
                     focus: True
                 IconButton:
+                    id: btn_search_product
                     source: './assets/icons/search_1.png'
-                    on_press: 
-                        tbl_products.items = root.search()
+                    on_press: root.btn_search_product_on_press()
             BoxLayout:
                 orientation: 'horizontal'
                 BoxLayout:
@@ -59,16 +54,19 @@
                         TextInput:
                             id: txt_local_code
                             hint_text: "Local code"
+                            on_text_validate: root.btn_search_local_code_on_press()
                         IconButton:
+                            id: btn_next_code
                             source: './assets/icons/right.png'
-                            on_press: root.btn_on_press()
+                            on_press: root.btn_next_code_on_press()
                         IconButton:
+                            id: btn_new_code
                             source: './assets/icons/double-right.png'
-                            on_press: root.btn_on_press()
+                            on_press: root.btn_new_code_on_press()
                         IconButton:
+                            id: btn_search_local_code
                             source: './assets/icons/search_1.png'
-                            on_press: 
-                                tbl_products.items = root.search(10)
+                            on_press: root.btn_search_local_code_on_press()
                     # Supplier
                     TextField:
                         Icon:
@@ -77,7 +75,7 @@
                             id: txt_supplier
                             hint_text: "Supplier"
                         IconButton:
-                            on_press: root.btn_on_press()
+                            id: cb_supliers
                             source: './assets/icons/down.png'
                     # Supplier's code
                     TextField:
@@ -86,10 +84,11 @@
                         TextInput:
                             id: txt_supplier_code
                             hint_text: "Supplier's code"
+                            on_text_validate: root.btn_search_suppliers_code_on_press()
                         IconButton:
+                            id: btn_search_suppliers_code
                             source: './assets/icons/search_1.png'
-                            on_press: 
-                                tbl_products.items = root.search(1)
+                            on_press: root.btn_search_suppliers_code_on_press()
                     # Quantity
                     BoxLayout:
                         orientation: 'horizontal'
@@ -109,7 +108,7 @@
                                 id: txt_unit
                                 hint_text: "Unit"
                             IconButton:
-                                on_press: root.btn_on_press()
+                                id: cb_unit
                                 source: './assets/icons/down.png'
                     # Cost
                     BoxLayout:
@@ -122,6 +121,8 @@
                                 id: txt_cost
                                 hint_text: "Cost"
                                 input_filter: 'float'
+                                on_text: root.update_prices()
+                                on_text_validate: root.calculate_cost()
                         BoxLayout:
                             pos_hint: {'top':1}
                             orientation: 'vertical'
@@ -129,12 +130,10 @@
                             width: 16
                             CheckBox:
                                 id: chk_iva
-                                on_press: 
-                                    root.check_press(self)
+                                on_state: root.calculate_cost(["iva"])
                             CheckBox:
                                 id: chk_dollar
-                                on_press: 
-                                    root.check_press(self)
+                                on_state: root.calculate_cost(["dollar"])
                         BoxLayout:
                             pos_hint: {'top':1}
                             orientation: 'vertical'
@@ -142,18 +141,20 @@
                             width: 90
                             DoubleClickLabel:
                                 id: lbl_iva
-                                text: "IVA ( 21% )"
+                                value: 21
+                                text: "IVA ( " + self.value_string + "% )"
                                 font_size: 14
                                 halign: 'right'
                                 pos_hint: {'left': 1}
-                                on_double_click: print('iva')
+                                on_double_click: root.change_iva()
                             DoubleClickLabel:
                                 id: lbl_dollar
-                                text: "Dollar ($750.00)"
+                                value: root.get_dollar_price()
+                                text: "Dollar ($" + self.value_string + ")"
                                 font_size: 14
                                 halign: 'right'
                                 pos_hint: {'left': 1}
-                                on_double_click: print('dollar')
+                                on_double_click: root.change_dollar()
                     # Earning
                     TextField:
                         Icon:
@@ -161,22 +162,23 @@
                         TextInput:
                             id: txt_earning
                             hint_text: "Earning"
-                            input_filter: 'float'
+                            input_filter: 'int'
+                            on_text: root.update_prices()
                         BoxLayout:
                             pos_hint: {'top':1.1}
                             orientation: 'vertical'
                             size_hint_x: None
                             width: self.minimum_width
                             IconButton:
-                                on_press: root.btn_on_press()
+                                id: btn_earnings_plus
+                                on_press: root.btn_earnings_plus_on_press()
                                 pos_hint: {}
                                 source: './assets/icons/plus_small.png'
-                                # size: 14,14
                             IconButton:
-                                on_press: root.btn_on_press()
+                                id: btn_earnings_minus
+                                on_press: root.btn_earnings_minus_on_press()
                                 pos_hint: {}
                                 source: './assets/icons/minus_small.png'
-                                # size: 14,14
                     # Section
                     TextField:
                         Icon:
@@ -185,7 +187,7 @@
                             id: txt_section
                             hint_text: "Section"
                         IconButton:
-                            on_press: root.btn_on_press()
+                            id: cb_section
                             source: './assets/icons/down.png'
                     # Date
                     TextField:
@@ -195,21 +197,14 @@
                             id: txt_date
                             hint_text: "Date"
                         IconButton:
-                            on_press: root.btn_on_press()
+                            id: btn_refresh_date
+                            on_press: root.btn_refresh_date_on_press()
                             source: './assets/icons/refresh_date.png'
                 # Image
-                BoxLayout:
+                AnchorLayout:
                     size_hint_x: .6
                     padding: 8
-                    # canvas.before:
-                    #     Color: 
-                    #         rgba: (0, 0, 1, .5)
-                    #     Rectangle:
-                    #         size: self.size
-                    #         pos: self.pos
                     Image:
-                        # size_hint: .9, .9
-                        # pos_hint: {'center_x':.5, 'center_y':.5}
                         source: './assets/images/DefaultBase.png'
                         fit_mode: 'cover'
         # Buttons
@@ -223,37 +218,33 @@
             FilledButton:
                 id: btn_save
                 text: "Save"
-                on_press: print(form_ly.size)
+                on_press: root.btn_save_on_press()
             # Add
             EmptyButton:
                 id: btn_add
                 text: "Add"
-                on_press: print("button add changes pressed")
+                on_press: root.btn_add_on_press()
             # Delete
             EmptyButton:
                 id: btn_delete
                 text: "Delete"
-                on_press: 
-                    tbl_products.items = []
+                on_press: root.btn_delete_on_press()
             # Replace
             EmptyButton:
                 id: btn_replace
                 text: "Replace"
-                on_press: print("button add changes pressed")
+                on_press: root.btn_replace_on_press()
             # Compare
             EmptyButton:
                 id: btn_compare
                 text: "Compare"
-                on_press: 
-                    print(tbl_products.widths)
+                on_press: root.btn_compare_on_press()
             # Clean
             EmptyButton:
                 id: btn_clean
                 text: "Clean"
-                on_press: 
-                    root.clean_all()
-                on_release: 
-                    txt_product.focus = True
+                on_press: root.btn_clean_on_press()
+                on_release: txt_product.focus = True
         # Table
         BoxLayout:
             id: table_layout
